--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <article>
-  <header>
+  <div class="post-header">
     <h1>{{ page.title }}</h1>
     <p><small>{{ page.date | date: "%Y-%m-%d" }}</small></p>
-  </header>
+  </div>
 
-  <section>{{ content }}</section>
+  <div class="post-content">{{ content }}</div>
 </article>
